--- a/project1frontend/src/main/webapp/WEB-INF/resources/css/registration.css
+++ b/project1frontend/src/main/webapp/WEB-INF/resources/css/registration.css
@@ -1,32 +1,52 @@
-body {
-font-family:'PT Sans',Helvetica, Arial, sans-serif;
-color:#fff;
-background-repeat: no-repeat;
-background-size:cover;
-background-color:green;
-}
 
-h1 {
-	color:#fff;
-	font-size: 30px;
-	font-weight: 700;
+
+/* .form-content//myineeeetraileeee
+{
+    padding: 5%;
+    border: 1px solid #ced4da;
+    margin-bottom: 2%;
+}
+.form-control{
+    border-radius:1.5rem;
+}..... */
+body{
+	background-repeat: no-repeat;
+ background-image:url("https://fr.freepik.com/vecteur-fond-technologie-futuriste-bleu-blanc_53876-85333.jpg");
+background-size:cover;
+ background-color:aqua; 
+}
+ .container::before {
+background-image: url(/img/login-page-background-images-hd-2.jpg);
+background-size: cover;
+content: "";
+display: block;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: -2;
+opacity: 0.4;
+} 
+ h1 {
+	color:#0000FF;
+	font-size: 25px;
+	font-weight: 700;/*700  */
 	text-shadow:0 1px 4px rgba(0,0,0,.2);
 	text-align:center;
 }
-
-form {
-position:relative;
-width:305px;
-margin:15px auto 0 auto;
-
-}
-
+ label
+{
+	font-family:'PT Sans', Helvetica, Arial, sans-serif;
+	/*  color:#fff;  */
+	text-align:left; 
+} 
 input {
 width:270px;
-height:42px;
+height:40px;/* 42px */
 margin-top:25px;
 padding:0 15px;
-background:#2d2d2d;
+background:#f2f2f2;/* black */
 background:rgba(45,45,45,.15);
 -moz-border-radius: 6px;
 -webkit-border-radius:6px;
@@ -47,10 +67,9 @@ text-shadow:0 1px 2px rgba(0,0,0,.1);
 -ms-transition: all .2s;
 }
 
-input:-moz-placeholder { color: #fff; }
+input:-moz-placeholder { color: #ffffff; }
 input:-ms-input-placeholder { color: #fff; }
 input::-webkit-input-placeholder { color: #fff; }
-
 input:focus {
 outline:none;
 -moz-box-shadow:
@@ -64,70 +83,29 @@ box-shadow:
         0 2px 7px 0 rgba(0,0,0,.2);
 }
 
-button {
-cursor:pointer;
+
+.btnSubmit
+{
+    cursor:pointer;
 width:270px;
 height:44px;
-margin-top:25px;
+margin-top:15px;/* 25px */
 padding:0;
-background:#ef4300;
--moz-border-radius: 6px;
--webkit-border-radius: 6px;
-border-radius: 6px;
-border:1px solid #ff730e;
--moz-box-shadow:
-        0 15px 30px 0 rgba(255,255,255,.25) inset,
-        0 2px 7px 0 rgba(0,0,0,.2);
--webkit-box-shadow:
-        0 15px 30px 0 rgba(255,255,255,.25) inset,
-        0 2px 7px 0 rgba(0,0,0,.2);
-box-shadow:
-        0 15px 30px 0 rgba(255,255,255,.25) inset,
-        0 2px 7px 0 rgba(0,0,0,.2);
-font-family:'PT Sans', Helvetica, Arial, sans-serif;
-font-size:14px;
-font-weight:700;
+    border:none;
+    border-radius:1.5rem;
+    padding: 1%;
+    width: 20%;
+    cursor: pointer;
+    background: #0000ff;
+    
+}
+
+
+/*  body {
+font-family:'PT Sans',Helvetica, Arial, sans-serif;color: #fff;//color of btnsummit//
 color:#fff;
-text-shadow:0 1px 2px rgba(0,0,0,.1);
--o-transition: all .2s;
-    -moz-transition: all .2s;
-    -webkit-transition: all .2s;
-    -ms-transition: all .2s;
+background-repeat: no-repeat;
+background-size:cover;
+background-color:aqua;
 }
-label
-{
-	font-family:'PT Sans', Helvetica, Arial, sans-serif;
-	color:#fff;
-	text-align:left;
-}
-
-button:hover {
-    -moz-box-shadow:
-        0 15px 30px 0 rgba(255,255,255,.15) inset,
-        0 2px 7px 0 rgba(0,0,0,.2);
-    -webkit-box-shadow:
-        0 15px 30px 0 rgba(255,255,255,.15) inset,
-        0 2px 7px 0 rgba(0,0,0,.2);
-    box-shadow:
-        0 15px 30px 0 rgba(255,255,255,.15) inset,
-        0 2px 7px 0 rgba(0,0,0,.2);
-}
-
-button:active {
-    -moz-box-shadow:
-        0 15px 30px 0 rgba(255,255,255,.15) inset,
-        0 2px 7px 0 rgba(0,0,0,.2);
-    -webkit-box-shadow:
-        0 15px 30px 0 rgba(255,255,255,.15) inset,
-        0 2px 7px 0 rgba(0,0,0,.2);
-    box-shadow:        
-        0 5px 8px 0 rgba(0,0,0,.1) inset,
-        0 1px 4px 0 rgba(0,0,0,.1);
-
-    border: 0px solid #ef4300;
-}
-
-
-
-
 
