--- a/project1frontend/src/main/webapp/WEB-INF/resources/css/aboutus.css
+++ b/project1frontend/src/main/webapp/WEB-INF/resources/css/aboutus.css
@@ -103,4 +103,20 @@ a:hover, a:active {
     text-align: center;
     width: 70px;
 }
+/*no counter bg... */
+.counter-Txt{text-align:center; font-size:20px; font-weight:bold; text-transform:uppercase; margin-top:20px;}
+.counter-Txt span
+{
+display:block; font-size:36px
+}
+.number_counter_bg
+{
+	background: #8502f0;
+    color: #fff;
+    
+}
+
+
+
+
 }
