--- a/project1frontend/src/main/webapp/WEB-INF/resources/css/navbar.css
+++ b/project1frontend/src/main/webapp/WEB-INF/resources/css/navbar.css
@@ -34,31 +34,7 @@ header span
 {
   color: #64effb;
 }   */
- /* div.container
-{now10:29..nowwwwwwwwwww
-    font-family: Raleway;
-    margin: 0 auto;
-	padding: 10em 3em;
-	text-align: center;
-}
-
-div.container a
-{
-    color: #FFF;
-    text-decoration: none;
-    font: 20px Raleway;
-    margin: 0px 10px;
-    padding: 10px 10px;
-    position: relative;
-    z-index: 0;
-    cursor: pointer;
-}
- */
-/* .red
-{
-    background: #f44336;
-} */
-
+ 
 /* Circle behind*/
 div.circleBehind a:before, div.circleBehind a:after
 {
@@ -103,79 +79,10 @@ div.circleBehind a:hover:after
     transform: translateX(-50%) translateY(-50%) scale(1.3);
 }
 
-/* Brackets go out
-div.brackets a:before, div.brackets a:after
-{
-    position: absolute;
-    opacity: 0;
-    font-size: 35px;
-    top: 0px;
-    transition: all 0.3s;
-}
-
-div.brackets a:before
-{
-    content: '(';
-    left: 0px;
-    transform: translateX(10px);
-}
-
-div.brackets a:after
-{
-    content: ')';
-    right: 0px;
-    transform: translateX(-10px);
-}
-
-div.brackets a:hover:before, div.brackets a:hover:after
-{
-    opacity: 1;
-    transform: translateX(0px);
-}
-
- */
-/* .purple
-{
-    background: #673ab7;
-}
-Top and Bottom borders come in
-div.topBotomBordersIn a:before, div.topBotomBordersIn a:after
-{
-    position: absolute;
-    text-color:white;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: #FFF;
-    content: "";
-    opacity: 0;
-    transition: all 0.3s;
-}
-
-div.topBotomBordersIn a:before
-{
-    top: 0px;
-    transform: translateY(-10px);
-}
-
-div.topBotomBordersIn a:after
-{
-    bottom: 0px;
-    transform: translateY(10px);
-}
-
-div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after
-{
-    opacity: 1;
-    transform: translateY(0px);
-}/* ownnnnnnnnnnnnnnnnn
- */
-/*=====enaghatham erutu ill paste....
- */ 
 
  
  #nav_bar{
-	background-color:#73ffff;    /* #c0c0c0;#b9f9f4; #00FFFF */
+	background-color:#73ffff;    
 	 height:100px;
 	width:100;/*  115*/
 	/* ul li a:hov */er{ 
@@ -219,7 +126,7 @@ div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after
 	text-align:right;
 } for homeee*/
 
-.ghost-color-btn:hover {
+/* .read-btn:hover {
     background: #00aeef;
     color: #ffffff;
     -webkit-transition: all 0.3s ease-out;
@@ -229,7 +136,7 @@ div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after
     transition: all 0.3s ease-out;
     text-decoration: none;
 }
-.ghost-color-btn {
+.read-btn {
     font-family: "Roboto",sans-serif;
     border: 2px solid #00aeef;
     color: #00aeef;
@@ -244,37 +151,10 @@ div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
-}
- 
-
-/* mineeeeeok ==============*/
- */* / ======== nowwwwww 8:49
-  div.container
-{
-    font-family: Raleway;
-    margin: 0 auto;
-	padding: 10em 3em;
-	text-align: center;
-}
-
-div.container a
-{
-    color: #FFF;
-    text-decoration: none;
-    text-color:white;
-    font: 15px Raleway;
-    margin: 0px 10px;
-    padding: 10px 10px;
-    position: relative;
-    z-index: 0;
-    cursor: pointer;
-}
-.purple
-{
-    background: #673ab7;
 } */
  
- /* 
+
+ 
  #navbardemo{
  cursor:pointer;
  
